refa (Laerdal.Build.proj -> Laerdal.Build.targets)
[skip ci]

--- a/Laerdal.Build.targets
+++ b/Laerdal.Build.targets
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Run with "msbuild Laerdal.Dfu.proj" -->
+
+<!-- to test stuff out on your localdev try these                                     -->
+<!--                                                                                  -->
+<!--   - to simply calculate the proper version and build use:                        -->
+<!--                                                                                  -->
+<!--        # on macos                                                                -->
+<!--        dotnet    msbuild                                            \            -->
+<!--            "Laerdal.Scripts/Laerdal.Builder.targets"                \            -->
+<!--            '"/p:Laerdal_Version_Full=1.0.x.0"'                                   -->
+<!--                                                                                  -->
+<!--        # on windows powershell                                                   -->
+<!--        dotnet    msbuild                                            ^            -->
+<!--            "Laerdal.Scripts\Laerdal.Builder.targets"                ^            -->
+<!--            /p:Laerdal_Version_Full=1.0.x.0                                       -->
+<!--                                                                                  -->
 <Project DefaultTargets="BuildProjects">
+
     <PropertyGroup>
-        <PackageOutputPath Condition="'$(PackageOutputPath)' == '' AND '$(TF_BUILD)' == '' ">$([System.IO.Path]::Combine($(MSBuildThisFileDirectory), `Output/`))</PackageOutputPath>
-        <PackageOutputPath Condition="'$(PackageOutputPath)' == '' AND '$(TF_BUILD)' != '' ">$(BUILD_ARTIFACTSTAGINGDIRECTORY)</PackageOutputPath>
         <Laerdal_Log_Level>High</Laerdal_Log_Level>
-        <Laerdal_Project Condition="'$(Laerdal_Project)' == ''">$([System.IO.Path]::Combine($(MSBuildThisFileDirectory), `Laerdal.Dfu/Laerdal.Dfu.csproj`))</Laerdal_Project>
+        
+        <PackageOutputPath Condition=" '$(PackageOutputPath)' == '' AND '$(TF_BUILD)' == '' ">$([System.IO.Path]::Combine($(MSBuildThisFileDirectory), `Output/`))</PackageOutputPath>
+        <PackageOutputPath Condition=" '$(PackageOutputPath)' == '' AND '$(TF_BUILD)' != '' ">$(BUILD_ARTIFACTSTAGINGDIRECTORY)</PackageOutputPath>
+
+        <Laerdal_Project Condition=" '$(Laerdal_Project)' == '' ">$([System.IO.Path]::Combine($(MSBuildThisFileDirectory), `Laerdal.Dfu/Laerdal.Dfu.csproj`))</Laerdal_Project>
+        
         <Laerdal_Script_FolderPath>$([System.IO.Path]::Combine($(MSBuildThisFileDirectory), `Laerdal.Scripts/`))</Laerdal_Script_FolderPath>
     </PropertyGroup>
 
@@ -17,9 +35,9 @@
             <Laerdal_Version_Details_FilePath Condition="'$(Laerdal_Version_Details_FilePath)' == ''">$([System.IO.Path]::Combine($(PackageOutputPath), `version.txt`))</Laerdal_Version_Details_FilePath>
             
             <!-- PARAMETERS -->
-            <Laerdal_Version_Major Condition="'$(Laerdal_Version_Major)' == ''">1</Laerdal_Version_Major>
-            <Laerdal_Master_Branch_Name Condition="'$(Laerdal_Master_Branch_Name)' == ''">main</Laerdal_Master_Branch_Name>
-            <Laerdal_Develop_Branch_Name Condition="'$(Laerdal_Develop_Branch_Name)' == ''">develop</Laerdal_Develop_Branch_Name>
+            <Laerdal_Version_Major Condition="       '$(Laerdal_Version_Major)'       == '' ">1</Laerdal_Version_Major>
+            <Laerdal_Master_Branch_Name Condition="  '$(Laerdal_Master_Branch_Name)'  == '' ">main</Laerdal_Master_Branch_Name>
+            <Laerdal_Develop_Branch_Name Condition=" '$(Laerdal_Develop_Branch_Name)' == '' ">develop</Laerdal_Develop_Branch_Name>
 
             <_Laerdal_Version_Script_Parameters>$(_Laerdal_Version_Script_Parameters) -o $(Laerdal_Version_Details_FilePath)</_Laerdal_Version_Script_Parameters>
             <_Laerdal_Version_Script_Parameters>$(_Laerdal_Version_Script_Parameters) --major $(Laerdal_Version_Major)</_Laerdal_Version_Script_Parameters>
@@ -55,23 +73,22 @@
     <!-- BUILD -->
     <Target Name="BuildProjects">
         <!-- REQUIRED PARAMETERS -->
-        <Error Text="'Laerdal_Version_Assembly' has to be set. Please call this script again with the argument '/p:Laerdal_Version_Assembly=...'"
-            Condition=" '$(Laerdal_Version_Assembly)' == '' " />
-        <Error Text="'Laerdal_Version_Full' has to be set. Please call this script again with the argument '/p:Laerdal_Version_Full=...'"
-            Condition=" '$(Laerdal_Version_Full)' == '' " />
-        <Error Text="'Laerdal_Project' has to be set. Please call this script again with the argument '/p:Laerdal_Project=...'"
-            Condition=" '$(Laerdal_Project)' == '' " />
-
+        <Error Condition=" '$(Laerdal_Project)'          == '' " Text="'Laerdal_Project' has to be set. Please call this script again with the argument '/p:Laerdal_Project=...'" />
+        <Error Condition=" '$(Laerdal_Version_Full)'     == '' " Text="'Laerdal_Version_Full' has to be set. Please call this script again with the argument '/p:Laerdal_Version_Full=...'" />
+        <Error Condition=" '$(Laerdal_Version_Assembly)' == '' " Text="'Laerdal_Version_Assembly' has to be set. Please call this script again with the argument '/p:Laerdal_Version_Assembly=...'" />
+        
         <!-- PARAMETERS -->
         <PropertyGroup>
-            <Configuration Condition="'$(Configuration)' == ''">Release</Configuration>
-            <_Laerdal_Build_Parameters>$(_Laerdal_Build_Parameters);PackageOutputPath=$(PackageOutputPath)</_Laerdal_Build_Parameters>
+            <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
+
             <_Laerdal_Build_Parameters>$(_Laerdal_Build_Parameters);Configuration=$(Configuration)</_Laerdal_Build_Parameters>
-            <_Laerdal_Build_Parameters>$(_Laerdal_Build_Parameters);Laerdal_Version_Assembly=$(Laerdal_Version_Assembly)</_Laerdal_Build_Parameters>
+            <_Laerdal_Build_Parameters>$(_Laerdal_Build_Parameters);PackageOutputPath=$(PackageOutputPath)</_Laerdal_Build_Parameters>
             <_Laerdal_Build_Parameters>$(_Laerdal_Build_Parameters);Laerdal_Version_Full=$(Laerdal_Version_Full)</_Laerdal_Build_Parameters>
+            <_Laerdal_Build_Parameters>$(_Laerdal_Build_Parameters);Laerdal_Version_Assembly=$(Laerdal_Version_Assembly)</_Laerdal_Build_Parameters>
         </PropertyGroup>
         
         <!-- RUN -->
         <MSBuild Projects="$(Laerdal_Project)" Properties="$(_Laerdal_Build_Parameters)" Targets="Restore;Build"/>
     </Target>
+
 </Project>
