--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -3,11 +3,11 @@ trigger:
   batch: true
   branches:
     include:
-    - '*'
+      - '*'
 
 
 pool:
-  vmImage: macOS-12
+  vmImage: 'macOS-12'
 
 
 steps:
@@ -18,18 +18,18 @@ steps:
     persistCredentials: true
 
   - task: DotNetCoreCLI@2
-    displayName: dotnet workload install
+    displayName: 'dotnet workload install'
     inputs:
-      command: custom
       custom: 'workload'
+      command: 'custom'
       arguments: 'install maui ios android'
 
   - task: DotNetCoreCLI@2
     displayName: dotnet build
     inputs:
-      projects: $(Build.SourcesDirectory)/Laerdal.Build.proj
+      projects: '$(Build.SourcesDirectory)/Laerdal.Build.targets'
       arguments: '--verbosity detailed'
-      configuration: Release
+      configuration: 'Release'
 
   - publish: $(Build.ArtifactStagingDirectory)
     artifact: output
