--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,11 @@
 #
 # https://docs.github.com/en/actions/migrating-to-github-actions/automated-migrations/migrating-from-azure-devops-with-github-actions-importer#environment-variable-mapping
 #
+# bare in mind that variable substitution is not supported in github at all    so we cant do stuff like this
+#
+#   env:
+#     Build_Artifacts_Folderpath: $build_repository_folderpath/Artifacts
+#
 
 name: '🏗 📦 Build, Pack & Deploy Nugets'
 
