refa (github-actions.yml): we now use 'USERNAME' as the username to auth against the internal github nuget servers

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -55,9 +55,9 @@ jobs:
                 &&                                                                                               \
                      "${{env.BUILD_REPOSITORY_FOLDERPATH}}/Laerdal.Scripts/Laerdal.SetupBuildEnvironment.sh"     \
                              "https://nuget.pkg.github.com/Laerdal/index.json"                                   \
-                             "__nuget_server_username_doesnt_matter__"                                           \
-                             "${{env.SCL_GITHUB_ACCESS_TOKEN}}"                                                  \
-                             "${{env.BUILD_REPOSITORY_FOLDERPATH}}/Artifacts"
+                             "USERNAME"                                                                          \
+                             "${{ env.SCL_GITHUB_ACCESS_TOKEN        }}"                                         \
+                             "${{ env.BUILD_REPOSITORY_FOLDERPATH    }}/Artifacts"
 
       # we need to manually install java11 because it is needed by the latest windows vm-images that run on
       # msbuild version 17.8.3 that started rolling out around 20 Nov 2023 https://stackoverflow.com/a/77519085/863651
