fix (github-actions.yml): we now use a custom access token to gain access to the nuget repos

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -15,7 +15,7 @@ env:
   LAERDAL_SOURCE_BRANCH: ${{           github.ref                            }}
   LAERDAL_REPOSITORY_PATH: ${{         github.repository                     }}
 
-  SCL_GITHUB_ACCESS_TOKEN: ${{        secrets.GITHUB_TOKEN                   }}
+  SCL_GITHUB_ACCESS_TOKEN: ${{        secrets.SCL_GITHUB_ACCESS_TOKEN        }}
   SCL_NUGET_ORG_FEED_API_KEY: ${{     secrets.NUGET_ORG_FEED_API_KEY         }}
   SCL_AZURE_ARTIFACTS_API_KEY: ${{    secrets.SCL_AZURE_ARTIFACTS_API_KEY    }}
   SCL_GITHUB_NUGET_FEED_USERNAME: ${{ secrets.SCL_GITHUB_NUGET_FEED_USERNAME }}
@@ -55,7 +55,7 @@ jobs:
                 &&                                                                                               \
                      "${{env.BUILD_REPOSITORY_FOLDERPATH}}/Laerdal.Scripts/Laerdal.SetupBuildEnvironment.sh"     \
                              "https://nuget.pkg.github.com/Laerdal/index.json"                                   \
-                             "USERNAME"                                                                          \
+                             "${{ env.SCL_GITHUB_NUGET_FEED_USERNAME }}"                                         \
                              "${{ env.SCL_GITHUB_ACCESS_TOKEN        }}"                                         \
                              "${{ env.BUILD_REPOSITORY_FOLDERPATH    }}/Artifacts"
 
