fix (github-actions.yml): fix a bug which was causing a phantom error when pushing nugets over to nuget.org
[skip ci]

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -119,4 +119,4 @@ jobs:
                   push                                                                            \
                   --source   "https://api.nuget.org/v3/index.json"                                \
                   --api-key  "${{env.SCL_NUGET_ORG_FEED_API_KEY}}"                                \
-                  *nupkg
+                  *.nupkg
