--- a/Laerdal.Dfu/Laerdal.Dfu.csproj
+++ b/Laerdal.Dfu/Laerdal.Dfu.csproj
@@ -2,11 +2,13 @@
 
     <PropertyGroup>
         <!-- todo   add support for maccatalyst -->
-        <TargetFrameworks>net7.0-ios;net7.0-android</TargetFrameworks>
+        <TargetFrameworks>net7.0-ios;net7.0-android;netstandard2.1;</TargetFrameworks>
 
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
+        
+        <LangVersion>11.0</LangVersion>
         
         <TargetPlatformIdentifier>$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)'))</TargetPlatformIdentifier>
 
@@ -30,13 +32,23 @@
         <Laerdal_Version Condition="       '$(Laerdal_Version)'       == '' ">$(Laerdal_Version_Major).$(Laerdal_Version_Minor).$(Laerdal_Version_Build)</Laerdal_Version>
     </PropertyGroup>
 
+    <ItemGroup Condition=" '$(TargetFramework.StartsWith(netstandard))' == 'true' ">
+        <Compile Remove="Platforms\**\**">
+        </Compile>
+    </ItemGroup>
+
+    <ItemGroup Condition=" '$(TargetFramework.StartsWith(netstandard))' != 'true' ">
+        <Compile Remove="Platforms.NetStandard\**">
+        </Compile>
+    </ItemGroup>
+
     <Import Project="Laerdal.targets"/>
 
     <ItemGroup Condition=" '$(TargetPlatformIdentifier)' == 'android' ">
         <PackageReference Include="Laerdal.Dfu.Bindings.Android" Version="2.3.0.43876"/>
     </ItemGroup>
     
-    <ItemGroup Condition=" '$(TargetPlatformIdentifier)' == 'ios'  or  '$(TargetPlatformIdentifier)' == 'maccatalyst' ">
+    <ItemGroup Condition=" '$(TargetPlatformIdentifier)' == 'ios' ">
         <PackageReference Include="Laerdal.Dfu.Bindings.iOS" Version="4.13.0.43915"/>
     </ItemGroup>
 
